<resources>

    <string name="app_name">Simple Timer</string>
    <string name="title_activity_main">Simple Timer</string>
    <string name="np1">1</string>
    <string name="np2">2</string>
    <string name="np3">3</string>
    <string name="np4">4</string>
    <string name="np5">5</string>
    <string name="np6">6</string>
    <string name="np7">7</string>
    <string name="np8">8</string>
    <string name="np9">9</string>
    <string name="np0">0</string>
    <string name="start">Start</string>
    <string name="stop_clear">Stop/Clear</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="remaining">remaining</string>
    <string name="timer">Timer</string>
    <string name="default_time">00:00:00</string>
    <string name="notification_popup_msg">Timer Started</string>
    <string name="notification_alarm_ending_on_text">ends at</string>
    <string name="notification_done_text">Timer has finished!</string>
    <string name="time_too_long_warning">Time input limit reached</string>
    <string name="menu_settings">Settings</string>
    <string name="alarm_name_hint">Timer Name</string>
    <!-- Settings Keys -->
    <string name="key_vibrate">VIBRATE_KEY</string>
    <string name="key_alarm_sound">ALARM_SOUND_KEY</string>
    <string name="key_button_placement">BUTTON_PLACEMENT_KEY</string>
    <string name="key_twenty_four_hour">TWENTY_FOUR_HOUR_KEY</string>
    <!-- Settings Descriptions -->
    <string name="desc_vibrate">Vibrate</string>
    <string name="desc_alarm_sound">Alarm Sound</string>
    <string name="desc_button_placement">Start/Stop on top</string>
    <string name="summ_button_placement_top">Buttons on top</string>
    <string name="summ_button_placement_bottom">Buttons on bottom</string>
    <string name="desc_twenty_four_hour">24 Hour</string>
    <string name="summ_twenty_four_hour_on">24 Hour in Notification</string>
    <string name="summ_twenty_four_hour_off">AM/PM in Notification</string>

</resources>