<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/alarmNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="none"
        android:gravity="center"
        android:hint="@string/alarm_name_hint"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:textSize="22sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarmNameEditText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/default_time"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/startStopLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/stopbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/stop_clear"
            android:textSize="24sp" />

        <Button
            android:id="@+id/startbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/start"
            android:textSize="24sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/startStopLayout"
        android:layout_below="@id/timerTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/numpad1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/numpad2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/numpad3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np3"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/numpad4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/numpad5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/numpad6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np6"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/numpad7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/numpad8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/numpad9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np9"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/numpad0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/np0"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>